<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fundo2" />

    <ImageView
        android:id="@+id/imgSimbolo"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/autisto" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="323dp"
        android:layout_height="77dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/jogar0"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="7"
        android:shadowRadius="3"
        android:text="@string/jogar"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnOpcoes"
        android:layout_width="323dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/botoes00"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="7"
        android:shadowRadius="3"
        android:text="@string/opções"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogadores" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="323dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="7"
        android:shadowRadius="3"
        android:background="@drawable/botoes00"
        android:text="@string/sair"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcoes" />

    <Button
        android:id="@+id/btnJogadores"
        android:layout_width="323dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="7"
        android:shadowRadius="3"
        android:background="@drawable/botoes00"
        android:text="@string/jogadores"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogar" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
